# casualcanvas

./: .gitignore  README.md  pm2-frontend.sh
aiwf-docs/: ARCHITECTURE.md  BACKEND.md  CONFIRMATION_CHECKLISTS.md  CONTRIBUTING.md  DEPLOY_VPS.md  FRONTEND.md  OPERATIONS_RUNBOOK.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SETUP_LOCAL.md  TESTING_QA.md  WORKFLOWS_AND_NODES.md
backend/: .env.example  Makefile  README.md
backend/.github/workflows/: ci.yml
backend/apps/api/: Dockerfile  pyproject.toml
backend/apps/api/src/: database.py  main.py  migrate_users.py  shared_broker.py
backend/apps/api/src/actions/: models.py  router.py  services.py
backend/apps/api/src/aiwf_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/apps/api/src/auth/: db_operations.py  jwt_utils.py  magic_auth.py  models.py  password_utils.py  router.py
backend/apps/api/src/ingest/: models.py  router.py  services.py
backend/apps/api/src/nodes/: router.py
backend/apps/api/src/rag/: router.py  services.py
backend/apps/api/src/runs/: models.py  router.py
backend/apps/api/src/workflows/: models.py  router.py
backend/apps/scheduler/: Dockerfile  pyproject.toml
backend/apps/scheduler/src/: scheduler.py
backend/apps/worker/: Dockerfile  pyproject.toml
backend/apps/worker/src/: __init__.py  broker.py  (+1 more)
backend/deploy/: docker-compose.yml  nginx.conf  prometheus.yml
backend/deploy/grafana/: dashboard.json
frontend/: README.md  tsconfig.json
frontend/apps/web/: Dockerfile  ecosystem.config.js  next.config.mjs  package.json  tailwind.config.js
(+22 files in other folders)
